# rust_demo01

./: Cargo.toml  README.md
src/: client.rs  client.rs.bak  client_new.rs  main.rs
test_format/: Cargo.toml
test_format/src/: main.rs
