[package]
name = "rust_demo01"
version = "0.1.0"
edition = "2024"

[dependencies]
ferris-says = "0.3.2"
tungstenite = "0.20.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.1"
futures-util = "0.3"
url = "2.4.1"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"