[package]
name = "rust_demo01"
version = "0.1.0"
edition = "2024"

[dependencies]
ferris-says = "0.3.2"
tungstenite = "0.20.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures-util = "0.3"
url = "2.4.1"
clap = "4.4"
tokio-native-tls = "0.3.0"
native-tls = "0.2"
lazy_static = "1.4.0"
tokio-socks = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "client_new"
path = "src/client_new.rs"